objects/Account.object
<CustomObject>
    <fields>
        <fullName>AAkPay__Account_Search_Name__c</fullName>
        <description>Updates to this formula require a corresponding update to the AAkonsult Payments Code to ensure matching success.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Name),&quot; ltd&quot;,&quot;&quot;),&quot; limited&quot;,&quot;&quot;),&quot; proprietory&quot;,&quot;&quot;),&quot; p/l&quot;,&quot;&quot;),&quot; pty&quot;,&quot;&quot;),&quot;&amp;&quot;,&quot;and&quot;),&quot;the &quot;,&quot;&quot;),&quot; company&quot;,&quot;&quot;),&quot; corp &quot;,&quot;&quot;),&quot; corporation&quot;,&quot;&quot;),&quot; incorporated&quot;,&quot;&quot;),&quot; international&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;&apos;&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Used by AAkonsult Payments when matching by Account Name to try and prevent duplicate Accounts.</inlineHelpText>
        <label>Account Search Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Address_Id__c</fullName>
        <inlineHelpText>Address provider/validator&apos;s Id for this address.</inlineHelpText>
        <label>Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Address_Update__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AAkPay__AccountAddressL?id=&quot;&amp;Id, &quot;Address Update&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Barcode_Number__c</fullName>
        <description>Generation of Barcode number requires access to appropriate Address Validation Software / license with AAkonsult Payments</description>
        <inlineHelpText>Numeric version of the Australia Post 4-state barcode.  One digit is returned for each bar of the barcode. Barcode font required for printing.</inlineHelpText>
        <label>Barcode Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Create_URL_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this to create a URL Token.  URL Tokens are useful when requesting payments using a public facing web link.
Activate/Use workflow rules to set this automatically.</inlineHelpText>
        <label>Create URL Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Current_Member_Subscriber_Status__c</fullName>
        <formula>IF(ISBLANK(AAkPay__Membership_End_Date__c),
&quot;&quot;,
  IF( AAkPay__Membership_End_Date__c&gt;= TODAY(),
      IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AFO&quot;, &quot;Current&quot;,24,24),
      IF(AAkPay__Membership_End_Date__c&gt;= (TODAY() - 15),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AFJ&quot;, &quot;Recently Expired&quot;,24,24),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AF9&quot;, &quot;Expired&quot;,24,24)
       )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Member/Subscriber Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Current_Member__c</fullName>
        <formula>IF( AAkPay__Membership_End_Date__c &gt;= TODAY(),&quot;YES&quot;,&quot;NO&quot;)</formula>
        <label>Current Member/Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Data_Validated__c</fullName>
        <inlineHelpText>Data validated through the Data Validation Tool.
Data validation of DPID must be included in order for this to be updated.</inlineHelpText>
        <label>Data Validated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>BillingAddress</fullName>
                </value>
                <value>
                    <fullName>ShippingAddress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Delivery_Point_Id__c</fullName>
        <label>Delivery Point Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Geocoding_Accuracy__c</fullName>
        <description>Location Precision for PbsSpectrum:
http://kleberwebsite.datatoolscloud.net.au/kleberbrowser/KleberMethodFieldOptions.aspx?Method=DataTools.Enhance.Address.Geocoding.PbsSpectrum.Au.Append&amp;ResultField=LocationPrecision&amp;Description=A%20code%20describing%20the%20precision%20of%20the%20geocode.&amp;pt=</description>
        <inlineHelpText>Displays the accuracy of the geocoding results</inlineHelpText>
        <label>Geocoding Accuracy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Membership_End_Date__c</fullName>
        <label>Membership/Subscriber End Date</label>
        <summarizedField>AAkPay__Account_Subscription__c.AAkPay__End_Date__c</summarizedField>
        <summaryForeignKey>AAkPay__Account_Subscription__c.AAkPay__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AAkPay__Membership_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Membership No&apos;s are automatically assigned the first time a payment is made.</inlineHelpText>
        <label>Membership No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Shipping_Address_Id__c</fullName>
        <label>Shipping Address_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Shipping_Address_Update__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AAkPay__AccountShippingAddressL?id=&quot;&amp;Id, &quot;Address Update&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Shipping_Delivery_Point_Id__c</fullName>
        <label>Shipping Delivery Point Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__URL_Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>URL Token</label>
        <referenceTo>AAkPay__URL_Tokens__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Update_Geocode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked, the address will be geocoded if it is missing</inlineHelpText>
        <label>Update Geocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__accountSectionAdditionalInfo__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__accountEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountSectionAdditionalInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__accountSectionAddress__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__accountEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountSectionAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__accountSectionDescription__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__accountEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountSectionDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__accountSectionInformation__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__accountEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountSectionInformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__accountSectionOther__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__accountEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountSectionOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_URL__c</fullName>
        <formula>HYPERLINK(&quot;file:&quot; + AccountNumber, &quot;Click Here&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Stores revenue customer is generating for us</description>
        <inlineHelpText>This is help text</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>SLA Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Multiselect__c</fullName>
        <label>Test Multiselect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>s,djkxclkxclshjkdlkcnjhlckjsdjbclkskncjlckbjxkc sdkjhsdcklsddsksds,djkxclkxclshjkdlkcnjhlckjsdjbclkskncjlckbjxkcsdkjhsdcklsddsksds,djkxclkxclshjkdlkcnjhlckjsdjbclkskncjlckbjxkcsdkjhsdcklsddsksds,djkxclkxclshjk</fullName>
                </value>
                <value>
                    <fullName>skj</fullName>
                </value>
                <value>
                    <fullName>kjsdc&apos;kjsdnc</fullName>
                </value>
                <value>
                    <fullName>s,mnc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Value_Not_Prospect</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type, &apos;Prospect&apos;)</errorConditionFormula>
        <errorMessage>Status can&apos;t be prospect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>